feat(frontend): port lovable ui assets into scaffold-eth

--- a/scaffold-eth-2/packages/nextjs/tsconfig.json
+++ b/scaffold-eth-2/packages/nextjs/tsconfig.json
@@ -21,6 +21,18 @@
     "paths": {
       "~~/*": [
         "./*"
+      ],
+      "@/*": [
+        "./alpha/*"
+      ],
+      "@/components/*": [
+        "./alpha/components/*"
+      ],
+      "@/hooks/*": [
+        "./alpha/hooks/*"
+      ],
+      "@/lib/*": [
+        "./alpha/lib/*"
       ]
     },
     "plugins": [
