--- a/scaffold-eth-2/packages/nextjs/package.json
+++ b/scaffold-eth-2/packages/nextjs/package.json
@@ -17,26 +17,75 @@
   },
   "dependencies": {
     "@heroicons/react": "~2.1.5",
+    "@hookform/resolvers": "^3.10.0",
+    "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-aspect-ratio": "^1.1.7",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-collapsible": "^1.1.11",
+    "@radix-ui/react-context-menu": "^2.2.15",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-hover-card": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-menubar": "^1.1.15",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-radio-group": "^1.3.7",
+    "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.5",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-toast": "^1.2.14",
+    "@radix-ui/react-toggle": "^1.1.9",
+    "@radix-ui/react-toggle-group": "^1.1.10",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@rainbow-me/rainbowkit": "2.2.9",
     "@react-native-async-storage/async-storage": "~2.2.0",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
     "@scaffold-ui/components": "^0.1.8",
     "@scaffold-ui/debug-contracts": "^0.1.7",
     "@scaffold-ui/hooks": "^0.1.6",
     "@tanstack/react-query": "~5.59.15",
+    "@types/three": "^0.170.0",
     "blo": "~1.2.0",
     "burner-connector": "0.0.20",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "daisyui": "5.0.9",
+    "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^11.18.2",
+    "input-otp": "^1.4.2",
     "kubo-rpc-client": "~5.0.2",
+    "lucide-react": "^0.462.0",
     "next": "~15.2.8",
     "next-nprogress-bar": "~2.3.13",
     "next-themes": "~0.3.0",
     "qrcode.react": "~4.0.1",
     "react": "~19.2.3",
+    "react-day-picker": "^8.10.1",
     "react-dom": "~19.2.3",
+    "react-hook-form": "^7.61.1",
     "react-hot-toast": "~2.4.0",
+    "react-resizable-panels": "^2.1.9",
+    "recharts": "^2.15.4",
+    "sonner": "^1.7.4",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.170.0",
     "usehooks-ts": "~3.1.0",
+    "vaul": "^0.9.9",
     "viem": "2.39.0",
     "wagmi": "2.19.5",
+    "zod": "^3.25.76",
     "zustand": "~5.0.0"
   },
   "devDependencies": {
