--- a/scaffold-eth-2/packages/nextjs/vercel.json
+++ b/scaffold-eth-2/packages/nextjs/vercel.json
@@ -1,3 +1,5 @@
 {
-  "installCommand": "cd ../.. && yarn install"
+  "framework": "nextjs",
+  "installCommand": "cd ../.. && yarn install",
+  "buildCommand": "next build"
 }
