--- a/nerve-cord/package.json
+++ b/nerve-cord/package.json
@@ -4,7 +4,10 @@
   "description": "Nerve cord — inter-bot message broker for OpenClaw instances",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "ping": "node ping-team.js",
+    "check": "node check.js",
+    "send": "node send.js"
   },
   "dependencies": {
     "nanoid": "^5.0.0"
