fix: resolve system-wide communication failures with heartbeats, name-mapping, and dashboard logging

--- a/nerve-cord/package.json
+++ b/nerve-cord/package.json
@@ -7,7 +7,9 @@
     "start": "node server.js",
     "ping": "node ping-team.js",
     "check": "node check.js",
-    "send": "node send.js"
+    "send": "node send.js",
+    "log": "node log.js",
+    "prio": "node priority.js"
   },
   "dependencies": {
     "nanoid": "^5.0.0"
