Simplify to Binance.US order book analysis - remove prediction markets
- Delete all Polymarket/Kalshi sentiment scripts
- Add Binance.US order book analyzer
- Combine order book pressure (70%) + price momentum (30%)
- Fix positions file path to be relative
- Update send-proposals to show order book analysis
- System now generates proposals based on real-time order book data

--- a/Backend/helix/alpha-strategist.skill/package.json
+++ b/Backend/helix/alpha-strategist.skill/package.json
@@ -10,11 +10,17 @@
     "analyze": "node scripts/analyze-and-propose.js",
     "send-proposals": "node scripts/send-proposals.js"
   },
-  "keywords": ["hyperliquid", "polymarket", "trading", "sentiment-analysis"],
+  "keywords": [
+    "hyperliquid",
+    "polymarket",
+    "trading",
+    "sentiment-analysis"
+  ],
   "author": "S4D5 Team",
   "license": "MIT",
   "dependencies": {
     "axios": "^1.6.0",
+    "cheerio": "^1.2.0",
     "dotenv": "^16.3.0"
   }
 }
