--- a/Backend/helix/alpha-strategist.skill/package.json
+++ b/Backend/helix/alpha-strategist.skill/package.json
@@ -23,6 +23,6 @@
     "axios": "^1.6.0",
     "cheerio": "^1.2.0",
     "dotenv": "^16.3.0",
-    "@coinbase/cdp-agentkit": "^0.0.1"
+    "@coinbase/coinbase-sdk": "^0.10.0"
   }
 }
