--- a/Backend/helix/alpha-strategist.skill/package.json
+++ b/Backend/helix/alpha-strategist.skill/package.json
@@ -1,28 +1,21 @@
 {
-  "name": "alpha-strategist-skill",
+  "name": "alpha-strategist",
   "version": "1.0.0",
-  "description": "Market analysis skill for Alpha Strategist bot - analyzes Hyperliquid markets and Polymarket sentiment",
+  "description": "AI-powered trading strategy bot for S4D5 AI Hedge Fund",
   "main": "scripts/analyze-and-propose.js",
   "scripts": {
-    "fetch-market": "node scripts/fetch-market-data.js",
-    "fetch-sentiment": "node scripts/fetch-sentiment.js",
-    "track-positions": "node scripts/track-positions.js",
-    "analyze": "node scripts/analyze-and-propose.js",
-    "send-proposals": "node scripts/send-proposals.js",
     "init-wallet": "node scripts/init-wallet.js"
   },
   "keywords": [
-    "hyperliquid",
-    "polymarket",
     "trading",
-    "sentiment-analysis"
+    "strategy",
+    "ai",
+    "analysis"
   ],
   "author": "S4D5 Team",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.6.0",
-    "cheerio": "^1.2.0",
     "dotenv": "^16.3.0",
-    "@coinbase/coinbase-sdk": "^0.10.0"
+    "ethers": "^6.9.0"
   }
 }
