--- a/Backend/helix/alpha-strategist.skill/package.json
+++ b/Backend/helix/alpha-strategist.skill/package.json
@@ -4,7 +4,8 @@
   "description": "AI-powered trading strategy bot for S4D5 AI Hedge Fund",
   "main": "scripts/analyze-and-propose.js",
   "scripts": {
-    "init-wallet": "node scripts/init-wallet.js"
+    "init-wallet": "node scripts/init-wallet.js",
+    "webhook": "node webhook-receiver.js"
   },
   "keywords": [
     "trading",
@@ -16,6 +17,7 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^16.3.0",
-    "ethers": "^6.9.0"
+    "ethers": "^6.9.0",
+    "express": "^4.18.2"
   }
 }
