Lower MIN_CONFIDENCE to 30

--- a/.env.example
+++ b/.env.example
@@ -66,8 +66,8 @@ NERVE_SERVER=https://your-server.railway.app
 BOTNAME=alpha-strategist
 
 # Analysis Settings
-ANALYSIS_INTERVAL=300000
-MIN_CONFIDENCE=60
+ANALYSIS_INTERVAL=30000
+MIN_CONFIDENCE=30  # Set to 30 for initial testing to ensure proposals are generated
 TARGET_ASSETS=BTC,ETH
 MAX_POSITION_SIZE=10000
 RISK_MULTIPLIER=0.5
