--- a/Backend/helix/alpha-strategist.skill/package.json
+++ b/Backend/helix/alpha-strategist.skill/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "dotenv": "^16.3.0",
     "ethers": "^6.9.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "node-fetch": "^2.7.0",
+    "openai": "^4.20.0"
   }
 }
