integrated real-time Nerve-Cord messages into frontend Agent Council - Add Next.js API routes for Nerve-Cord messages and logs - Update AgentTerminal component to fetch and display real messages - Add bot name mapping (alpha-strategist → ALPHA STRATEGIST) - Extract proposal IDs and transaction hashes from messages - Add LIVE/DEMO mode toggle - Poll Nerve-Cord every 5 seconds for updates - Add visual effects (glow) for approvals/rejections - Create comprehensive documentation and quick start guide

--- a/scaffold-eth-2/packages/nextjs/.env.example
+++ b/scaffold-eth-2/packages/nextjs/.env.example
@@ -12,3 +12,6 @@
 NEXT_PUBLIC_ALCHEMY_API_KEY=
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=
 
+# Nerve-Cord Configuration (Server-side only)
+NERVE_SERVER=https://s4d5-production.up.railway.app
+NERVE_TOKEN=s4d5-suhas-susmitha-karthik
