Implemented Hedera HTS and tests passed successfully

--- a/.env.example
+++ b/.env.example
@@ -1,107 +1,21 @@
-# =============================================================================
-# S4D5 - Multi-Agent Trading System
-# Environment Configuration Template
-# =============================================================================
-# Copy this file to .env and fill in your actual values
-# Never commit .env to git (already in .gitignore)
-# =============================================================================
+# HCS Operator
+ACCOUNT_ID=0.0.XXXXXXX
+PRIVATE_KEY=3030...
 
-# ┌─────────────────────────────────────────────────────────────────────────┐
-# │ 1. BASE NETWORK - Smart Contract & Trade Execution                      │
-# └─────────────────────────────────────────────────────────────────────────┘
-
-# Base RPC URL (default: https://mainnet.base.org)
-BASE_RPC_URL=https://mainnet.base.org
-
-# BaseScan API (Get from: https://basescan.org/myapikey)
-BASESCAN_API_KEY=your_basescan_api_key_here
-
-# Note: Agent wallets are auto-generated in Backend/*/config/wallet.json
-# Each agent creates its own unique wallet on first run
-
-# ┌─────────────────────────────────────────────────────────────────────────┐
-# │ 2. KITE AI - Agent Payments & Identity                                  │
-# └─────────────────────────────────────────────────────────────────────────┘
-
-# Kite AI Testnet Configuration
-KITE_RPC=https://rpc-testnet.gokite.ai/
-KITE_CHAIN_ID=2368
-
-# Note: Kite wallets are auto-generated in Backend/*/config/kite-wallet.json
-# Fund wallets at: https://faucet.gokite.ai
-
-# ┌─────────────────────────────────────────────────────────────────────────┐
-# │ 3. HEDERA - Governance & Messaging                                      │
-# └─────────────────────────────────────────────────────────────────────────┘
-
-# Hedera Operator Account
-HEDERA_OPERATOR_ID=0.0.xxxxxx
-HEDERA_OPERATOR_KEY=302e020100300506032b657004220420...
-
-# HCS Topic (Agent Communication)
-HEDERA_TOPIC_ID=0.0.7987903
-
-# HTS Token (Internal Rewards)
-REWARD_TOKEN_ID=0.0.7988233
-
-# Agent Identities
-STRATEGIST_ID=0.0.xxxxxx
-STRATEGIST_KEY=302e020100300506032b657004220420...
-
-RISK_ID=0.0.xxxxxx
-RISK_KEY=302e020100300506032b657004220420...
-
-# ┌─────────────────────────────────────────────────────────────────────────┐
-# │ 4. NERVE-CORD - Agent Communication Hub                                 │
-# └─────────────────────────────────────────────────────────────────────────┘
-
-NERVE_PORT=9999
-NERVE_TOKEN=your-secret-token-here
-NERVE_SERVER=https://your-server.railway.app
-
-# ┌─────────────────────────────────────────────────────────────────────────┐
-# │ 5. ALPHA STRATEGIST - Trading Strategy Configuration                    │
-# └─────────────────────────────────────────────────────────────────────────┘
-
-BOTNAME=alpha-strategist
-
-# Analysis Settings
+# Testing Thresholds
+MIN_CONFIDENCE=30
 ANALYSIS_INTERVAL=30000
-MIN_CONFIDENCE=30  # Set to 30 for initial testing to ensure proposals are generated
-TARGET_ASSETS=BTC,ETH
-MAX_POSITION_SIZE=10000
-RISK_MULTIPLIER=0.5
 
-# Position Management
-TAKE_PROFIT_PCT=5
-STOP_LOSS_PCT=3
-MAX_POSITION_AGE_HOURS=24
+# Connection
+HEDERA_TOPIC_ID=0.0.XXXXXXX
+REWARD_TOKEN_ID=0.0.XXXXXXX
 
-# =============================================================================
-# WALLET MANAGEMENT
-# =============================================================================
-# Agents auto-generate wallets on first run:
-#   - Base wallets: Backend/*/config/wallet.json
-#   - Kite wallets: Backend/*/config/kite-wallet.json
-#
-# Same private key works across all chains (multi-chain identity):
-#   ✓ Base (trade execution)
-#   ✓ Kite AI (x402 payments)
-#   ✓ Hedera (governance)
-#   ✓ 0G (storage)
-#
-# Fund wallets:
-#   - Base: Send ETH for gas fees
-#   - Kite: https://faucet.gokite.ai
-#   - Hedera: Transfer HBAR to agent accounts
-# =============================================================================
+# Agent Identities (Souls)
+ALPHA_STRATEGIST_ID=0.0.XXXXXXX
+ALPHA_STRATEGIST_KEY=302e...
 
-# =============================================================================
-# SECURITY BEST PRACTICES
-# =============================================================================
-# ✓ Never commit .env or config/wallet.json files to git
-# ✓ Set file permissions: chmod 600 .env
-# ✓ Use the same .env across all EC2 instances (AS4, AO3, EH6)
-# ✓ Rotate Hedera keys and API tokens regularly
-# ✓ Keep wallet.json files backed up securely
-# =============================================================================
+AUDIT_ORACLE_ID=0.0.XXXXXXX
+AUDIT_ORACLE_KEY=302e...
+
+EXECUTION_HAND_ID=0.0.XXXXXXX
+EXECUTION_HAND_KEY=302e...
