--- a/quicknode-webhook/package.json
+++ b/quicknode-webhook/package.json
@@ -16,7 +16,8 @@
   "author": "S4D5 Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "uuid": "^13.0.0"
   },
   "engines": {
     "node": ">=16.x"
