--- a/quicknode-webhook/package.json
+++ b/quicknode-webhook/package.json
@@ -16,8 +16,7 @@
   "author": "S4D5 Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "uuid": "^13.0.0"
+    "express": "^4.18.2"
   },
   "engines": {
     "node": ">=16.x"
