Update .env.example with the latest S4D5 Reward Token ID

--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,9 @@ MIN_CONFIDENCE=30
 ANALYSIS_INTERVAL=30000
 
 # Connection
-HEDERA_TOPIC_ID=0.0.XXXXXXX
-REWARD_TOKEN_ID=0.0.XXXXXXX
+HEDERA_TOPIC_ID=0.0.7987903
+REWARD_TOKEN_ID=0.0.8000068
+S4D5_TOKEN_ID=0.0.8000068
 
 # Agent Identities (Souls)
 ALPHA_STRATEGIST_ID=0.0.XXXXXXX
